--- a/src/components/custom-input/custom-input.module.scss
+++ b/src/components/custom-input/custom-input.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   margin: 20px 0;
+  width: 100%;
 
   &__labelContainer {
     display: flex;
@@ -14,6 +15,10 @@
     &__label {
       margin: 0 10px;
       font-size: $p-font-size-medium;
+
+      .focused & {
+        @include mixins.theme-colors(color, $primary-dark, $primary-light);
+      }
     }
 
     a {
@@ -21,6 +26,10 @@
       margin: 0;
       text-decoration: none;
       @include mixins.theme-colors(color, $primary-dark, $primary-light);
+
+      &:hover {
+        opacity: 0.7;
+      }
     }
 
   }
@@ -54,12 +63,18 @@
       .focused & {
         @include mixins.theme-colors(color, $primary-dark, $primary-light);
       }
+
+      &:hover {
+        cursor: pointer;
+        opacity: 0.7;
+      }
     }
 
     &__input {
       background-color: transparent;
       border: 0;
       font-size: $p-font-size-large;
+      width: 75%;
 
       &::placeholder {
         @include mixins.theme-colors(color, $hint-dark, $hint-light);
