--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,4 +1,12 @@
 @mixin theme-colors($property, $dark-value, $light-value) {
+  &.dark {
+    #{$property}: $dark-value;
+  }
+
+  &.light {
+    #{$property}: $light-value;
+  }
+
   .dark & {
     #{$property}: $dark-value;
   }
