--- a/src/components/custom-input/custom-input.module.scss
+++ b/src/components/custom-input/custom-input.module.scss
@@ -26,7 +26,7 @@
       }
     }
 
-    a {
+    p {
       font-size: $p-font-size-medium;
       margin: 0;
       text-decoration: none;
@@ -34,6 +34,7 @@
 
       &:hover {
         opacity: 0.7;
+        cursor: pointer;
       }
     }
 
