--- a/src/components/forms/sign-in/sign-in-form.module.scss
+++ b/src/components/forms/sign-in/sign-in-form.module.scss
@@ -1,5 +1,5 @@
-@use '../../styles/variables' as *;
-@use '../../styles/mixins' as mixins;
+@use '../../../styles/variables' as *;
+@use '../../../styles/mixins' as mixins;
 
 .form {
 
