--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -18,3 +18,15 @@ h2 {
 p {
   font-size: $p-font-size-large;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000000s ease-in-out 0s;
+}
+
+input:-webkit-autofill::first-line {
+  font-size: $p-font-size-medium;
+  font-family: $font-family;
+}
