--- a/src/components/forms/forget-password/forget-password.module.scss
+++ b/src/components/forms/forget-password/forget-password.module.scss
@@ -3,8 +3,10 @@
 
 .form {
 
-  &__textFields {
-    margin-bottom: 60px;
+  &__buttonsContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
   }
 
   &__createAccount {
