--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -26,5 +26,6 @@ $h2-font-size-large: 48px;
 
 $p-font-size-large: 20px;
 $p-font-size-medium: 18px;
+$p-font-size-small: 16px;
 
 $font-family: 'Poppins' sanserif;
