mixed minor error with theme switching

--- a/src/components/forms/sign-in/sign-in-form.module.scss
+++ b/src/components/forms/sign-in/sign-in-form.module.scss
@@ -2,6 +2,7 @@
 @use '../../../styles/mixins' as mixins;
 
 .form {
+  background-color: transparent;
 
   &__textFields {
     margin-bottom: 80px;
