--- a/src/components/forms/sign-up/sign-up-form.module.scss
+++ b/src/components/forms/sign-up/sign-up-form.module.scss
@@ -11,6 +11,7 @@
 
   &__signInToAccount {
     font-size: $p-font-size-large !important;
+    text-align: center;
 
     span {
       @include mixins.theme-colors(color, $primary-dark, $primary-light);
