--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -3,7 +3,7 @@
 
 .navbar {
   height: 100vh;
-  width: 300px;
+  min-width: 300px;
   @include mixins.theme-colors(background-color, $tertiary-dark, $tertiary-light);
 
 
