--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -23,6 +23,7 @@ $green: #5ECD90;
 
 // FONT-SIZE
 $h2-font-size-large: 48px;
+$h3-font-size-large: 32px;
 
 $p-font-size-large: 20px;
 $p-font-size-medium: 18px;
