--- a/src/components/user-panel/user-panel.module.scss
+++ b/src/components/user-panel/user-panel.module.scss
@@ -1,5 +1,4 @@
 @use '../../styles/variables' as *;
-@use '../../styles/mixins' as mixins;
 
 .userPanel {
   display: flex;
@@ -34,7 +33,7 @@
       position: relative;
 
       &:before {
-        @include mixins.theme-colors(background-color, $primary-dark, $primary-light);
+        background-color: var(--primary);
         content: "";
         position: absolute;
         top: 4px;
@@ -45,7 +44,7 @@
       }
 
       svg {
-        @include mixins.theme-colors(color, $hint-dark, $hint-light);
+        color: var(--hint);
       }
 
       &:hover {
@@ -53,10 +52,6 @@
         opacity: 0.7;
       }
     }
-
-
-
-
 
     &__user {
       display: flex;
