--- a/src/components/navbar/navbar-link/navbar-link.module.scss
+++ b/src/components/navbar/navbar-link/navbar-link.module.scss
@@ -1,5 +1,4 @@
 @use '../../../styles/variables' as *;
-@use '../../../styles/mixins' as mixins;
 
 .navbarLink {
   display: flex;
@@ -7,7 +6,7 @@
   align-items: center;
   gap: 30px;
   padding: 10px 20px;
-  @include mixins.theme-colors(color, $hint-dark, $hint-light);
+  color: var(--hint);
   font-weight: bold;
   border-radius: 10px;
   font-size: 16px;
@@ -15,11 +14,11 @@
 
   &:hover {
     cursor: pointer;
-    @include mixins.theme-colors(background-color, $primary-transparent-dark, $primary-transparent-light);
+    background-color: var(--primary-transparent);
   }
 }
 
 .active {
-  @include mixins.theme-colors(color, $primary-dark, $primary-light);
-  @include mixins.theme-colors(background-color, $primary-transparent-dark, $primary-transparent-light);
+  background-color: var(--primary-transparent);
+  color: var(--primary);
 }
