--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -4,7 +4,9 @@
   height: 100vh;
   min-width: 300px;
   background-color: var(--tertiary);
-
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 
   &__container {
     display: flex;
