--- a/src/components/list-manager/add-new-task/add-new-task.module.scss
+++ b/src/components/list-manager/add-new-task/add-new-task.module.scss
@@ -28,17 +28,16 @@
 
   &__taskDetails {
     background-color: var(--tertiary);
+    border-radius: 10px;
+    padding: 10px 20px;
+    min-width: 400px;
 
-    &__list {
+    &__option {
       display: flex;
+      flex-direction: row;
       justify-content: space-between;
-
-      select {
-        background-color: var(--background);
-        border: none;
-        border-radius: 10px;
-        padding: 10px;
-      }
+      align-items: center;
+      gap: 1rem;
     }
   }
 }
