--- a/src/components/custom-input/custom-input.module.scss
+++ b/src/components/custom-input/custom-input.module.scss
@@ -78,6 +78,12 @@
       }
     }
 
+    input:-webkit-autofill {
+      --webkit-box-shadow: 0 0 0 1000px var(--tertiary) inset;
+      box-shadow: 0 0 0 1000px var(--tertiary) inset;
+      -webkit-text-fill-color: var(--text);
+    }
+
     &__input {
       background-color: transparent;
       border: 0;
