--- a/src/components/list-item/list-item.module.scss
+++ b/src/components/list-item/list-item.module.scss
@@ -1,9 +1,54 @@
 .listItem {
-  position: relative;
-  padding: 20px;
-  border-radius: 10px;
-  width: 260px;
-  min-height: 140px;
+  &__grid {
+    position: relative;
+    border-radius: 10px;
+    padding: 20px;
+    min-height: 180px;
+    width: 280px;
+
+    svg {
+      position: absolute;
+      z-index: -1;
+    }
+
+    p {
+      z-index: 1;
+      position: absolute;
+      bottom: 0;
+      font-weight: 600;
+      font-size: 25px;
+    }
+
+    &:hover {
+      cursor: pointer;
+      opacity: 0.7;
+    }
+
+
+  }
+
+  &__list {
+    width: 100%;
+    display: flex;
+    position: relative;
+    border-radius: 10px;
+    align-items: center;
+    padding: 0 20px;
+    gap: 20px;
+
+
+
+    p {
+      font-weight: 600;
+      font-size: 18px;
+    }
+
+    &:hover {
+      cursor: pointer;
+      opacity: 0.7;
+    }
+
+  }
 
   &__taskAmount {
     position: absolute;
@@ -12,23 +57,5 @@
     border-radius: 0 10px 0 10px;
     padding: 5px 15px;
     font-size: 20px;
-  }
-
-  svg {
-    position: absolute;
-    z-index: -1;
-  }
-
-  p {
-    z-index: 1;
-    position: absolute;
-    bottom: 0;
-    font-weight: 600;
-    font-size: 25px;
-  }
-
-  &:hover {
-    cursor: pointer;
-    opacity: 0.7;
   }
 }
