--- a/src/app/[locale]/(authenticated)/lists/page.module.scss
+++ b/src/app/[locale]/(authenticated)/lists/page.module.scss
@@ -3,15 +3,6 @@
   flex-direction: column;
   height: 100%;
   width: 100%;
-  margin: 40px;
-  justify-content: center;
-
-  &__upperContainer {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 40px;
-  }
+  margin: 40px 0 0 0;
 
 }
