--- a/src/components/list-manager/list-manager.module.scss
+++ b/src/components/list-manager/list-manager.module.scss
@@ -1,7 +1,8 @@
 .listManager {
   display: flex;
-  max-width: 1000px;
   gap: 60px;
+  flex-direction: row;
+  flex-wrap: wrap;
 
   &__button {
     display: flex;
@@ -9,5 +10,7 @@
     justify-content: flex-start;
     padding: 15px 20px;
     gap: 20px;
+    width: 335px;
+    min-width: 295px;
   }
 }
