fond css error with parallel routes and moved styles to tsx file

--- a/src/app/[locale]/(authenticated)/lists/layout.module.scss
+++ b/src/app/[locale]/(authenticated)/lists/layout.module.scss
@@ -1,12 +1,13 @@
 .layoutContainer {
   display: flex;
   flex-direction: row;
+  height: 73vh;
 
   &__lists {
     flex: 1;
   }
 
   &__details {
-    flex: 2;
+    flex: 3;
   }
 }
