--- a/src/app/[locale]/(authenticated)/lists/@lists/default.module.scss
+++ b/src/app/[locale]/(authenticated)/lists/@lists/default.module.scss
@@ -1,3 +1,7 @@
 .listContainer {
-  flex: 1;
+  width: 100%;
+  height: 95%;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  background-color: red;
 }
