--- a/src/app/[locale]/globals.scss
+++ b/src/app/[locale]/globals.scss
@@ -97,6 +97,10 @@ a:-webkit-any-link {
   color: var(--text);
   cursor: pointer;
   text-decoration: none;
+
+  &:hover {
+    opacity: 0.7;
+  }
 }
 
 ::-webkit-scrollbar {
