created style for task

--- a/src/components/task/task.module.scss
+++ b/src/components/task/task.module.scss
@@ -2,11 +2,30 @@
   background-color: var(--tertiary);
   border-radius: 10px;
   padding: 10px 20px;
+  margin: 0 20px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
+  &__arrow {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 5px 10px;
+
+    &:hover {
+      cursor: pointer;
+      opacity: 0.7;
+    }
+  }
 
   &__main {
     display: flex;
     flex-direction: row;
-    justify-content: left;
+    justify-content: flex-start;
+    padding: 10px 0 0 0;
     align-items: center;
     gap: 20px;
 
@@ -15,7 +34,6 @@
       height: 25px;
       border: 2px solid;
       border-radius: 10px;
-      border-color: var(--primary);
 
       &__completed {
         width: 25px;
@@ -40,7 +58,39 @@
         opacity: 0.7;
       }
     }
+
+    p {
+      margin: 0;
+      font-size: 18px;
+    }
   }
 
+  &__details {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 10px 0 0 5px;
+    gap: 20px;
 
+    &__detail {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+    }
+
+  }
+
+}
+
+.pastDeadline {
+  color: var(--red)
+}
+
+.today {
+  color: var(--gold)
+}
+
+.upcoming {
+  color: var(--green)
 }
