--- a/src/components/task/task.module.scss
+++ b/src/components/task/task.module.scss
@@ -29,36 +29,6 @@
     align-items: center;
     gap: 20px;
 
-    &__checkBox {
-      width: 25px;
-      height: 25px;
-      border: 2px solid;
-      border-radius: 10px;
-
-      &__completed {
-        width: 25px;
-        height: 25px;
-        border: 2px solid;
-        border-radius: 10px;
-        border-color: var(--primary);
-        background-color: var(--primary);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-
-        &:hover {
-          cursor: pointer;
-          opacity: 0.7;
-        }
-      }
-
-      &:hover {
-        cursor: pointer;
-        opacity: 0.7;
-      }
-    }
-
     p {
       margin: 0;
       font-size: 18px;
@@ -81,7 +51,17 @@
 
   }
 
+  &__subtasks {
+    margin: 20px 0 0 0;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.5s ease-in-out;
+
+
+  }
 }
+
+
 
 .pastDeadline {
   color: var(--red)
