--- a/src/components/task/task.module.scss
+++ b/src/components/task/task.module.scss
@@ -56,21 +56,19 @@
     overflow: hidden;
     max-height: 0;
     transition: max-height 0.5s ease-in-out;
-
-
   }
 }
 
 
 
 .pastDeadline {
-  color: var(--red)
+  color: var(--red);
 }
 
 .today {
-  color: var(--gold)
+  color: var(--yellow);
 }
 
 .upcoming {
-  color: var(--green)
+  color: var(--green);
 }
