created subpage for lists

--- a/src/app/[locale]/(authenticated)/lists/[slug]/page.module.scss
+++ b/src/app/[locale]/(authenticated)/lists/[slug]/page.module.scss
@@ -1,32 +1,52 @@
 .listPage {
   flex: 1;
-  margin: 0 0 0 40px;
   height: 95%;
   padding: 0 20px 0 0;
   overflow-y: auto;
+  display: flex;
 
-  &__upperContainer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  &__left {
+    flex: 1;
 
-    h3 {
-      margin: 0;
-    }
-
-    &__leftSide {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-    }
-  }
-
-  &__tasksContainer {
-
-    &__tasks {
+    &__listsContainer {
       display: flex;
       flex-direction: column;
       gap: 20px;
     }
   }
+
+  &__right {
+    flex: 2;
+
+    &__upperContainer {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      h3 {
+        margin: 0;
+      }
+
+      &__leftSide {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+      }
+    }
+
+    &__tasksContainer {
+
+      p {
+        margin: 20px
+      }
+
+      &__tasks {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+      }
+    }
+  }
+
+
 }
