--- a/src/components/list-item/list-item.module.scss
+++ b/src/components/list-item/list-item.module.scss
@@ -36,10 +36,12 @@
     align-items: center;
     padding: 0 20px;
     gap: 20px;
+    border: 2px solid transparent;
 
     p {
       font-weight: 600;
       font-size: 18px;
+
     }
 
     &:hover {
@@ -53,7 +55,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    border-radius: 0 10px 0 10px;
+    border-radius: 0 6px 0 6px;
     padding: 5px 15px;
     font-size: 20px;
   }
