--- a/src/components/list-item/list-item.module.scss
+++ b/src/components/list-item/list-item.module.scss
@@ -36,7 +36,7 @@
     align-items: center;
     padding: 0 20px;
     gap: 20px;
-    border: 2px solid transparent;
+    border: 2px solid;
 
     p {
       font-weight: 600;
