--- a/src/components/list-manager/add-new-list/add-new-list.module.scss
+++ b/src/components/list-manager/add-new-list/add-new-list.module.scss
@@ -1,80 +1,89 @@
-.addNewList {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  background-color: var(--secondary);
-  padding: 40px;
-  border-radius: 10px;
-  transform: translate(-50%, -50%);
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   z-index: 10;
 
-  &__upperContainer {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
 
-    &__placeholder {
-      width: 32px;
-    }
+  &__addNewList {
+    background-color: var(--secondary);
+    padding: 40px;
+    border-radius: 10px;
 
-    svg {
-      &:hover {
-        cursor: pointer;
-        opacity: 0.7;
+    &__upperContainer {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+
+      &__placeholder {
+        width: 32px;
+      }
+
+      svg {
+        &:hover {
+          cursor: pointer;
+          opacity: 0.7;
+        }
       }
     }
-  }
 
-  &__iconsContainer {
-    display: flex;
-    flex-direction: row;
-    gap: 40px;
-    justify-content: center;
-    align-items: center;
-
-    &__icon {
-      border-radius: 10px;
-      padding: 2px;
+    &__iconsContainer {
       display: flex;
+      flex-direction: row;
+      gap: 40px;
       justify-content: center;
       align-items: center;
-      border: 3px solid;
-      border-color: transparent;
 
-      &.active {
-        border-color: var(--tertiary);
-      }
+      &__icon {
+        border-radius: 10px;
+        padding: 2px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 3px solid;
+        border-color: transparent;
 
-      &:hover {
-        cursor: pointer;
-        opacity: 0.7;
+        &.active {
+          border-color: var(--tertiary);
+        }
+
+        &:hover {
+          cursor: pointer;
+          opacity: 0.7;
+        }
       }
     }
-  }
 
-  &__colorsContainer {
-    display: flex;
-    flex-direction: row;
-    gap: 40px;
-    margin-bottom: 40px;
-    justify-content: center;
-    align-items: center;
+    &__colorsContainer {
+      display: flex;
+      flex-direction: row;
+      gap: 40px;
+      margin-bottom: 40px;
+      justify-content: center;
+      align-items: center;
 
-    &__color {
-      width: 44px;
-      height: 44px;
-      border-radius: 10px;
-      border: 3px solid;
-      border-color: transparent;
+      &__color {
+        width: 44px;
+        height: 44px;
+        border-radius: 10px;
+        border: 3px solid;
+        border-color: transparent;
 
-      &.active {
-        border-color: var(--tertiary);
-      }
+        &.active {
+          border-color: var(--tertiary);
+        }
 
-      &:hover {
-        cursor: pointer;
-        opacity: 0.7;
+        &:hover {
+          cursor: pointer;
+          opacity: 0.7;
+        }
       }
     }
   }
