--- a/src/components/list-manager/list-manager.module.scss
+++ b/src/components/list-manager/list-manager.module.scss
@@ -11,7 +11,7 @@
     justify-content: flex-start;
     padding: 15px 20px;
     gap: 20px;
-    width: 335px;
+    max-width: 335px;
     min-width: 295px;
   }
 }
