--- a/src/components/list-manager/task-manager/task-manager.module.scss
+++ b/src/components/list-manager/task-manager/task-manager.module.scss
@@ -15,8 +15,8 @@
     min-width: 800px;
     padding: 40px;
     border-radius: 10px;
-    overflow-y: auto;
     max-height: 85vh;
+    overflow-y: auto;
 
     &__upperContainer {
       display: flex;
@@ -166,5 +166,26 @@
         }
       }
     }
+  }
+
+
+  ::-webkit-scrollbar-track {
+    background: var(--background);
+    border-radius: 10px;
+    margin: 20px
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: var(--tertiary);
+    border-radius: 10px;
+
+  }
+
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--primary-transparent);
   }
 }
