--- a/src/components/task/task.module.scss
+++ b/src/components/task/task.module.scss
@@ -24,16 +24,31 @@
 
   &__main {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    padding: 10px 0 0 0;
+    justify-content: space-between;
     align-items: center;
-    gap: 20px;
+    padding: 10px 0 0 0;
 
-    p {
-      margin: 0;
-      font-size: 18px;
+    svg {
+      &:hover {
+        cursor: pointer;
+        opacity: 0.7;
+      }
     }
+
+    &__left {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 20px;
+
+      p {
+        margin: 0;
+        font-size: 18px;
+      }
+    }
+
+
   }
 
   &__details {
