--- a/src/components/custom-button/custom-button.module.scss
+++ b/src/components/custom-button/custom-button.module.scss
@@ -1,4 +1,5 @@
 @use '../../styles/variables' as *;
+@use '../../styles/breakpoints' as breakpoint;
 
 .link {
   text-decoration: none;
@@ -30,6 +31,10 @@
   &[disabled] {
     opacity: 0.7;
     cursor: default;
+  }
+
+  @include breakpoint.media('<=LGphone') {
+    width: 90%;
   }
 }
 
