--- a/src/components/custom-input/custom-input.module.scss
+++ b/src/components/custom-input/custom-input.module.scss
@@ -1,4 +1,5 @@
 @use '../../styles/variables' as *;
+@use '../../styles/breakpoints' as breakpoint;
 
 .customInput {
   display: flex;
@@ -107,5 +108,9 @@
     top: 65px;
   }
 
+  @include breakpoint.media('<=LGphone') {
+    min-width: 250px;
+    margin: 20px 0;
+  }
 
 }
