--- a/src/components/forms/sign-in/sign-in-form.module.scss
+++ b/src/components/forms/sign-in/sign-in-form.module.scss
@@ -1,10 +1,23 @@
 @use '../../../styles/variables' as *;
+@use '../../../styles/breakpoints' as breakpoint;
 
 .form {
   background-color: transparent;
 
   &__textFields {
     margin-bottom: 80px;
+
+    @include breakpoint.media('<=LGphone') {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      margin: 0 20px;
+      margin-bottom: 50px;
+
+      p {
+        text-align: left;
+      }
+    }
   }
 
   &__createAccount {
@@ -18,6 +31,16 @@
         cursor: pointer;
         opacity: 0.7;
       }
+    }
+  }
+
+  @include breakpoint.media('<=LGphone') {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    p {
+      text-align: center;
     }
   }
 }
