--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -28,5 +28,6 @@ $h3-font-size-large: 32px;
 $p-font-size-large: 20px;
 $p-font-size-medium: 18px;
 $p-font-size-small: 16px;
+$p-font-size-x-small: 14px;
 
 $font-family: 'Poppins' sanserif;
