--- a/src/app/[locale]/welcome/page.module.scss
+++ b/src/app/[locale]/welcome/page.module.scss
@@ -86,7 +86,21 @@
   }
 
   @include breakpoint.media('<=LGphone') {
-    margin: 40px 0
+    padding: 20px 0;
+
+    &__container {
+      &__right {
+        &__logo {
+          img {
+            width: 150px;
+          }
+        }
+
+        &__terms {
+          font-size: $p-font-size-x-small !important;
+        }
+      }
+    }
   }
 
 
