--- a/src/components/forms/forget-password/forget-password.module.scss
+++ b/src/components/forms/forget-password/forget-password.module.scss
@@ -1,9 +1,12 @@
 @use '../../../styles/variables' as *;
+@use '../../../styles/breakpoints' as breakpoint;
 
 .form {
+  min-width: 430px;
 
   &__buttonsContainer {
     display: flex;
+    align-items: center;
     flex-direction: column;
     gap: 30px;
   }
@@ -20,5 +23,23 @@
         opacity: 0.7;
       }
     }
+
+    @include breakpoint.media('<=tablet') {
+      text-align: center;
+      font-size: $p-font-size-x-small !important;
+    }
+  }
+
+  @include breakpoint.media('<=tablet') {
+    margin: 0 20px;
+  }
+
+  @include breakpoint.media('<=LGphone') {
+    min-width: 300px;
+  }
+
+  @include breakpoint.media('<=phone') {
+    min-width: 250px;
+
   }
 }
