--- a/src/components/forms/sign-in/sign-in-form.module.scss
+++ b/src/components/forms/sign-in/sign-in-form.module.scss
@@ -2,22 +2,11 @@
 @use '../../../styles/breakpoints' as breakpoint;
 
 .form {
+  min-width: 430px;
   background-color: transparent;
 
   &__textFields {
     margin-bottom: 80px;
-
-    @include breakpoint.media('<=LGphone') {
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      margin: 0 20px;
-      margin-bottom: 50px;
-
-      p {
-        text-align: left;
-      }
-    }
   }
 
   &__createAccount {
@@ -32,15 +21,26 @@
         opacity: 0.7;
       }
     }
+
+    @include breakpoint.media('<=tablet') {
+      text-align: center;
+      font-size: $p-font-size-x-small !important;
+    }
+  }
+
+  @include breakpoint.media('<=tablet') {
+    margin: 0 20px;
   }
 
   @include breakpoint.media('<=LGphone') {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    p {
-      text-align: center;
-    }
+    min-width: 300px;
   }
+
+  @include breakpoint.media('<=phone') {
+    min-width: 250px;
+
+  }
+
+
+
 }
