--- a/src/components/forms/sign-up/sign-up-form.module.scss
+++ b/src/components/forms/sign-up/sign-up-form.module.scss
@@ -1,10 +1,17 @@
 @use '../../../styles/variables' as *;
+@use '../../../styles/breakpoints' as breakpoint;
 
 .form {
+  min-width: 430px;
+
+  &____inputsContainer {
+    margin-bottom: 80px;
+  }
 
   &__buttonsContainer {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 30px;
   }
 
@@ -21,5 +28,23 @@
         opacity: 0.7;
       }
     }
+
+    @include breakpoint.media('<=tablet') {
+      text-align: center;
+      font-size: $p-font-size-x-small !important;
+    }
+  }
+
+  @include breakpoint.media('<=tablet') {
+    margin: 0 20px;
+  }
+
+  @include breakpoint.media('<=LGphone') {
+    min-width: 300px;
+  }
+
+  @include breakpoint.media('<=phone') {
+    min-width: 250px;
+
   }
 }
