--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -1,4 +1,5 @@
 @use '../../styles/variables' as *;
+@use '../../styles//breakpoints' as breakpoint;
 
 .navbar {
   height: 100vh;
@@ -29,7 +30,9 @@
         text-transform: uppercase;
       }
     }
+  }
 
-
+  @include breakpoint.media('<=tablet') {
+    display: none;
   }
 }
