--- a/src/styles/_breakpoints.scss
+++ b/src/styles/_breakpoints.scss
@@ -2,6 +2,8 @@ $breakpoints: (
   "phone": 360px,
   "LGphone": 440px,
   "tablet": 768px,
+  "LGtablet": 990px,
+  "SMdesktop": 1251px,
   "desktop": 1366px,
   "LGdesktop": 1920px) !default;
 
