--- a/src/components/navbar/navbar-link/navbar-link.module.scss
+++ b/src/components/navbar/navbar-link/navbar-link.module.scss
@@ -1,4 +1,5 @@
 @use '../../../styles/variables' as *;
+@use '../../../styles//breakpoints' as breakpoint;
 
 .navbarLink {
   display: flex;
@@ -15,6 +16,10 @@
   &:hover {
     cursor: pointer;
     background-color: var(--primary-transparent);
+  }
+
+  @include breakpoint.media('<=SMdesktop') {
+    gap: 15px;
   }
 }
 
