--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -32,6 +32,14 @@
     }
   }
 
+  @include breakpoint.media('<=SMdesktop') {
+    min-width: 250px;
+
+    p {
+      font-size: $p-font-size-x-small;
+    }
+  }
+
   @include breakpoint.media('<=tablet') {
     display: none;
   }
