--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -24,6 +24,10 @@ $green: #5ECD90;
 // FONT-SIZE
 $h2-font-size-large: 48px;
 $h3-font-size-large: 32px;
+$h3-font-size-medium: 28px;
+$h3-font-size-small: 24px;
+$h3-font-size-x-small: 20px;
+$h3-font-size-xx-small: 16px;
 
 $p-font-size-large: 20px;
 $p-font-size-medium: 18px;
