--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -29,6 +29,7 @@ $h3-font-size-small: 24px;
 $h3-font-size-x-small: 20px;
 $h3-font-size-xx-small: 16px;
 
+$p-font-size-x-large: 25px;
 $p-font-size-large: 20px;
 $p-font-size-medium: 18px;
 $p-font-size-small: 16px;
