--- a/src/app/[locale]/(authenticated)/layout.module.scss
+++ b/src/app/[locale]/(authenticated)/layout.module.scss
@@ -1,3 +1,5 @@
+@use '../../../styles/breakpoints' as breakpoint;
+
 .layoutContainer {
   display: flex;
   flex-direction: row;
@@ -5,7 +7,11 @@
   &__mainContainer {
     width: 100%;
     margin: 40px;
-    overflow-y: hidden;
-    overflow-x: hidden;
+  }
+
+  @include breakpoint.media('<=tablet') {
+    &__mainContainer {
+      margin: 20px;
+    }
   }
 }
