--- a/src/components/list-item/list-item.module.scss
+++ b/src/components/list-item/list-item.module.scss
@@ -2,18 +2,22 @@
 @use '../../styles/breakpoints' as breakpoint;
 
 .listItem {
-  display: flex;
-  flex-direction: row;
-  flex: 1 1 20%;
-  min-width: 200px;
-
-
   &--grid {
+    display: flex;
+    flex-direction: row;
+    min-width: 200px;
+    flex: 1 1 20%;
     position: relative;
     border-radius: 10px;
-    padding: 20px;
     height: 180px;
     width: 100%;
+
+    a {
+      padding: 20px;
+      box-sizing: border-box;
+      width: 100%;
+      height: 100%;
+    }
 
     svg {
       position: absolute;
@@ -33,8 +37,17 @@
       opacity: 0.7;
     }
 
+    &__taskAmount {
+      position: absolute;
+      top: 0;
+      right: 0;
+      border-radius: 0 6px 0 6px;
+      padding: 5px 15px;
+      font-size: 20px;
+    }
+
     @include breakpoint.media('<=desktop') {
-      height: 120px;
+      height: 150px;
 
       svg {
         width: 80px;
@@ -46,8 +59,8 @@
       }
     }
 
-    @include breakpoint.media('<=tablet') {
-      height: 100px;
+    @include breakpoint.media('<=SMdesktop') {
+      height: 150px;
       min-width: 150px;
 
       svg {
@@ -56,30 +69,42 @@
       }
     }
 
-    @include breakpoint.media('<=phone') {
+    @include breakpoint.media('<=LGphone') {
       min-width: 100px;
+      height: 100px;
 
       svg {
         width: 50px;
         height: 50px;
+      }
+
+      p {
+        font-size: $p-font-size-x-small;
       }
     }
 
   }
 
   &--list {
-    width: 85%;
-    display: flex;
+    width: 90%;
+    height: 70px;
     position: relative;
     border-radius: 10px;
-    align-items: center;
-    padding: 0 20px;
-    gap: 20px;
     border: 2px solid var(--background);
+
+    a {
+      padding: 0 20px;
+      display: flex;
+      flex-direction: row;
+      gap: 20px;
+      height: 100%;
+      flex: 1;
+      align-items: center;
+    }
 
     p {
       font-weight: 600;
-      font-size: 18px;
+      font-size: $p-font-size-medium;
 
     }
 
@@ -88,16 +113,33 @@
       opacity: 0.7;
     }
 
+    &__taskAmount {
+      position: absolute;
+      top: 0;
+      right: 0;
+      border-radius: 0 6px 0 6px;
+      padding: 2px 10px;
+      font-size: 18px;
+    }
+
+
+    @include breakpoint.media('<=SMdesktop') {
+
+      p {
+        font-size: $p-font-size-x-small;
+        margin: 0;
+      }
+
+      svg {
+        width: 32px;
+        height: 32px;
+      }
+    }
+
   }
 
-  &__taskAmount {
-    position: absolute;
-    top: 0;
-    right: 0;
-    border-radius: 0 6px 0 6px;
-    padding: 5px 15px;
-    font-size: 20px;
-  }
+
+
 
 
 }
