added delete task function

--- a/src/components/list-manager/task-manager/task-manager.module.scss
+++ b/src/components/list-manager/task-manager/task-manager.module.scss
@@ -175,6 +175,17 @@
         }
       }
     }
+
+    &__buttonsContainer {
+      display: flex;
+      flex-direction: row;
+      gap: 20px;
+
+      &__deleteButton {
+        background-color: var(--red-transparent);
+        color: var(--red);
+      }
+    }
   }
 
 
