--- a/src/components/subtask/subtask.module.scss
+++ b/src/components/subtask/subtask.module.scss
@@ -3,4 +3,10 @@
   align-items: center;
   gap: 20px;
   margin: 0 0 0 40px;
+
+  &--completed {
+    text-decoration: line-through;
+    text-decoration-thickness: 2px;
+    opacity: 0.5;
+  }
 }
