disabling actions on main list

--- a/src/components/context-menu/context-menu.module.scss
+++ b/src/components/context-menu/context-menu.module.scss
@@ -24,4 +24,18 @@
   &:hover {
     background-color: var(--primary-transparent);
   }
+
+  &--disabled {
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    font-size: $p-font-size-medium;
+    opacity: 0.5;
+
+    &:hover {
+      background-color: none;
+      cursor: default;
+    }
+  }
 }
